// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`empty > default 1`] = `
<div>
  <div
    class="flex w-full min-w-0 flex-1 flex-col items-center justify-center gap-4 rounded-xl border-dashed p-6 text-center text-balance"
    data-slot="empty"
  >
    <div
      class="flex max-w-sm flex-col items-center gap-1"
      data-slot="empty-header"
    >
      <div
        class="mb-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 flex size-8 shrink-0 items-center justify-center rounded-md bg-muted text-foreground [&_svg:not([class*='size-'])]:size-4"
        data-slot="empty-icon"
        data-variant="icon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-inbox"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="22 12 16 12 14 15 10 15 8 12 2 12"
          />
          <path
            d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
          />
        </svg>
      </div>
      <div
        class="text-sm font-medium tracking-tight"
        data-slot="empty-title"
      >
        No results
      </div>
      <div
        class="text-xs/relaxed text-muted-foreground [&>a]:underline [&>a]:underline-offset-4 [&>a:hover]:text-primary"
        data-slot="empty-description"
      >
        Your query returned no rows. Try adjusting the filters.
      </div>
    </div>
  </div>
</div>
`;

exports[`empty > searchEmpty 1`] = `
<div>
  <div
    class="flex w-full min-w-0 flex-1 flex-col items-center justify-center gap-4 rounded-xl border-dashed p-6 text-center text-balance"
    data-slot="empty"
  >
    <div
      class="flex max-w-sm flex-col items-center gap-1"
      data-slot="empty-header"
    >
      <div
        class="mb-2 flex shrink-0 items-center justify-center [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-transparent"
        data-slot="empty-icon"
        data-variant="default"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search size-10 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
      </div>
      <div
        class="text-sm font-medium tracking-tight"
        data-slot="empty-title"
      >
        No matches found
      </div>
      <div
        class="text-xs/relaxed text-muted-foreground [&>a]:underline [&>a]:underline-offset-4 [&>a:hover]:text-primary"
        data-slot="empty-description"
      >
        Try a different search term or clear the filter.
      </div>
    </div>
  </div>
</div>
`;

exports[`empty > withAction 1`] = `
<div>
  <div
    class="flex w-full min-w-0 flex-1 flex-col items-center justify-center gap-4 rounded-xl border-dashed p-6 text-center text-balance"
    data-slot="empty"
  >
    <div
      class="flex max-w-sm flex-col items-center gap-1"
      data-slot="empty-header"
    >
      <div
        class="mb-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 flex size-8 shrink-0 items-center justify-center rounded-md bg-muted text-foreground [&_svg:not([class*='size-'])]:size-4"
        data-slot="empty-icon"
        data-variant="icon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-database"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <ellipse
            cx="12"
            cy="5"
            rx="9"
            ry="3"
          />
          <path
            d="M3 5V19A9 3 0 0 0 21 19V5"
          />
          <path
            d="M3 12A9 3 0 0 0 21 12"
          />
        </svg>
      </div>
      <div
        class="text-sm font-medium tracking-tight"
        data-slot="empty-title"
      >
        No connections
      </div>
      <div
        class="text-xs/relaxed text-muted-foreground [&>a]:underline [&>a]:underline-offset-4 [&>a:hover]:text-primary"
        data-slot="empty-description"
      >
        Get started by adding your first database connection.
      </div>
    </div>
    <div
      class="flex w-full max-w-sm min-w-0 flex-col items-center gap-2 text-xs/relaxed text-balance"
      data-slot="empty-content"
    >
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-md border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all duration-150 ease-out outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 h-6 gap-1 px-2 text-xs/relaxed has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3 bg-primary text-primary-foreground hover:bg-primary/80"
        data-slot="button"
        tabindex="0"
        type="button"
      >
        Add Connection
      </button>
    </div>
  </div>
</div>
`;
